[tool.poetry]
name = "bambu-fleet-manager"
version = "0.1.0"
description = "FastAPI backend for Bambu Lab P1S 3D printer fleet management"
authors = ["Lenny Suswa <lenny@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"                    # async PostgreSQL driver
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"           # file uploads
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.4"
paho-mqtt = "^1.6.1"                  # Bambu MQTT
structlog = "^24.1.0"                 # structured logging
httpx = "^0.27.0"                     # async HTTP (camera snapshots)
pillow = "^10.3.0"                    # image processing for snapshots
aiofiles = "^23.2.1"                  # async file I/O
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"